feat: Add Streamable HTTP MCP example

--- a/mcp/makefile
+++ b/mcp/makefile
@@ -1,7 +1,13 @@
-.PHONY: install
+.PHONY: install stdio-mcp-example http-mcp-example
 
 install:
 	uv sync
 
 stdio-mcp-example:
-	fastmcp dev stdio-mcp-example/main.py
+	fastmcp dev stdio-mcp-example/server.py
+
+http-mcp-server:
+	uv run http-mcp-example/server.py
+
+http-mcp-example:
+	fastmcp dev http-mcp-example/server.py
