feat: Add simple MCP example with tools, resources and prompts

--- a/mcp/makefile
+++ b/mcp/makefile
@@ -1,4 +1,4 @@
-.PHONY: install stdio-mcp-example http-mcp-example
+.PHONY: install stdio-mcp-example http-mcp-example simple-mcp-example
 
 install:
 	uv sync
@@ -11,3 +11,6 @@ http-mcp-server:
 
 http-mcp-example:
 	fastmcp dev http-mcp-example/server.py
+
+simple-mcp-example:
+	fastmcp dev simple-mcp-example/server.py
